--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/logo3.png" alt="logo de gael" >
+        <img class="logo" src="imagenes/logo3.png" alt="logo de gael" >
     </header>
 
     <main>
